--- a/ejercicio1.html
+++ b/ejercicio1.html
@@ -50,6 +50,8 @@
         </div>
     </div>
     <script>
+
+        // Funciones
         function validar(nombre, asunto, mensaje) {
             let pasamosLaValidacion = true;
             document.querySelector("#mensajeenviado").innerHTML = "";
@@ -92,10 +94,7 @@
 
         form.addEventListener("submit", function (e) {
             e.preventDefault();
-            // limpiarErrores();
-
-
-
+            
             let nombre = document.querySelector("#nombre").value;
             let asunto = document.querySelector("#asunto").value;
             let mensaje = document.querySelector("#mensaje").value;
