--- a/ejercicio2.html
+++ b/ejercicio2.html
@@ -35,7 +35,7 @@
     </div>
 </div>
     <script>
-// Funcione
+// Funciones
 function cambiarcolor(color) {
   document.querySelector("#caja").style.backgroundColor = color;
 }
