problemas ejercicio 3 en proceso

--- a/ejercicio3.html
+++ b/ejercicio3.html
@@ -52,16 +52,14 @@
                 if (resultado <= 0) resultado = 0;
                 return resultado;
             }
-
-
-            console.log(sor);
+         return  1; 
 
         }
 
         // main
 
-        let numero1 = document.getElementById("valor1").value;
-        let numero2 = document.getElementById("valor2").value;
+        var numero1 = document.getElementById("valor1").value;
+        var numero2 = document.getElementById("valor2").value;
 
         let sumar = document.getElementById('btn-sumar');
         let restar = document.getElementById('btn-restar');
