--- a/ejercicio3.html
+++ b/ejercicio3.html
@@ -62,6 +62,7 @@
         let sumar = document.getElementById('btn-sumar');
         let restar = document.getElementById('btn-restar');
 
+        // mo pude declarar las bariables como globales ya que en Addeventlistener toman valor 0
         // let numero1 = document.getElementById('valor1').value;
         // let numero2 = document.getElementById('valor2').value;
 
